# dj_vite_inertia_demo

./: .gitignore  Dockerfile  Dockerfile.vite  LICENSE  Procfile.example  README.md  dev-requirements.txt  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
django_vite_inertia/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html
vue_app/: package-lock.json  package.json  vite.config.js
vue_app/src/: main.js
vue_app/src/Pages/Home/: About.vue  Index.vue
vue_app/src/lib/: django-routes.js
